--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="content">
-            <h1>Wallpaper Haven</h1> 
+            <h1>Wallpaper Heaven</h1> 
             <h1></h1>    
             <h2>Looking for a nice wallpaper for your computer?<br>Well here you can choose between different themes and a new wallpaper will be generated,<br>if you find the image interesting, you may download it.</h2>
             <br>
